--- a/_posts/2025-2-10-LTN②①.md
+++ b/_posts/2025-2-10-LTN②①.md
@@ -1,8 +1,8 @@
 ---
 layout:     post
-title:     LTN②〇
+title:     LTN②①
 subtitle:  
-date:       2025-3-18
+date:       2025-3-28
 author:     
 header-img: 
 catalog: true
@@ -13,7 +13,7 @@ typora-root-url: ..
 
 
 
-### LTN②〇
+### LTN②①
 
 -❌作业102： AOP 是什么？作用是什么？核心关键词：切面、切入点、通知、织入分别是什么含义并举例
 ❌2025-03 Part1 设计模式、底层理念、惰性加载函数
@@ -33,18 +33,18 @@ typora-root-url: ..
 >
 >共计 118 题
 
-LTN1 【推荐做题时间 03-24 - 7题 实际做题时间： ？】
-2025.02 TS - dayjs 引入但失效问题
-2025.02 docker-compose 的配置管理 context 
-2022-10 TS 泛型函数/泛型接口/泛型约束、特性、type/keyof/enum/as/Partial
-2025-03 浏览器前端性能优化RAIL
-2025-03 js执行优先级 + 测试题
-2025-03 TCP 滑动窗口 VS TCP 排队
-作业101：什么是 JS 的一等对象？还有哪些一等对象
+LTN1 【推荐做题时间 03-24 - 7题 实际做题时间： 3.30】
+-✅2025.02 TS - dayjs 引入但失效问题
+ ❌2025.02 docker-compose 的配置管理 context 
+✅2022-10 TS 泛型函数/泛型接口/泛型约束、特性、type/keyof/enum/as/Partial
+-❌2025-03 浏览器前端性能优化RAIL
+❌2025-03 js执行优先级 + 测试题
+❌2025-03 TCP 滑动窗口 VS TCP 排队
+-❌作业101：什么是 JS 的一等对象？还有哪些一等对象
 
-LTN1 【推荐做题时间 03-25 - 2题 实际做题时间： ？】
-作业82：写一个复杂的 SQL： ①只返回某列不同的值，相同的忽略 ②拼接A列和B列为字符串后输出 ③将某一列转换为大写输出 ④计算某列行数，一个包含null的个数，一个不包含null个数 ⑤求和、求最大、求最小、求平均某列的值 ⑥给表起别名 ⑦查询条件涵盖 id为1,同时price大于10，或者是NULL，或者是 5-10之间，或者是 1或2，或者年份为2025 ⑧按照某列分组 ⑨按照某列排序(降序)
-作业86：Nextjs 中 Link 的变更是哪个版本开始的，有什么变更？从这个版本开始对路由有什么变更？
+LTN1 【推荐做题时间 03-25 - 2题 实际做题时间： 3.30】
+✅作业82：写一个复杂的 SQL： ①只返回某列不同的值，相同的忽略 ②拼接A列和B列为字符串后输出 ③将某一列转换为大写输出 ④计算某列行数，一个包含null的个数，一个不包含null个数 ⑤求和、求最大、求最小、求平均某列的值 ⑥给表起别名 ⑦查询条件涵盖 id为1,同时price大于10，或者是NULL，或者是 5-10之间，或者是 1或2，或者年份为2025 ⑧按照某列分组 ⑨按照某列排序(降序)
+✅作业86：Nextjs 中 Link 的变更是哪个版本开始的，有什么变更？从这个版本开始对路由有什么变更？
 
 LTN1 【推荐做题时间 03-26 - 3题 实际做题时间： ？】
 2021.04 12 垃圾回收机制
@@ -156,28 +156,48 @@ LTN1 【推荐做题时间 04-03 - 7题 实际做题时间： ？】
 2024-12 Nestjs 核心特性、基本概念、生命周期、获取请求和响应、不同组件的实现和执行顺序
 
 LTN2 【推荐做题时间 04-03 - 5题 实际做题时间： ？】
-作业23：写出js 代码的执行顺序。词法作用域的特点是什么？ \nfunction bar(){
-console.log(myName);\n}\nfunction foo(){
-var myName = 'hi 坑';
-bar();\n}\nvar myName = 'bye 坑';\nfoo();\n--\nvar name = \"global name\";\nvar obj = {
-name: 'Alice',
-getName: function() { console.log(this.name) }\n}\nvar getName = obj.getName;\ngetName();\n--\n—-\n(function(){
-try{
- console.log(1, a); // undefined
- var a=\"a\";
- console.log(a); // 'a'
- b(); // 'b'
- c(); // Error
- function b(){
-  console.log(\"b\");
- }
- var c=function(){
-  console.log(\"c\");
- }
- console.log(\"d\") // 没有被执行
-}catch(e){
- console.log('err')
-}\n})()
+作业23：写出js 代码的执行顺序。词法作用域的特点是什么？
+
+```js
+function bar(){
+    console.log(myName);
+}
+function foo(){
+    var myName = 'hi 坑';
+    bar();
+}
+var myName = 'bye 坑';
+foo();
+--
+var name = "global name";
+var obj = {
+    name: 'Alice',
+    getName: function() { console.log(this.name) }
+}
+var getName = obj.getName;
+getName();
+--
+(function(){
+    try{
+        console.log(1, a);
+        var a="a";
+        console.log(a);
+        b();
+        c();
+        function b(){
+            console.log("b");
+        }
+        var c=function(){
+            console.log("c");
+        }
+        console.log("d") // 没有被执行
+    }catch(e){
+        console.log('err')
+    }
+})()
+```
+
+
 作业63：React渲染怎么实现的？涉及到哪些生命周期/hooks？以 const [count, setCount]=useState(0)具体说明
 2024.12 模拟实现promise
 2025.02 nextTick 原理，在Vue2、Vue3中分别是什么步骤实现的，简单模拟实现流程
@@ -236,6 +256,135 @@ LTN6 【推荐做题时间 04-06 - 2题 实际做题时间： ？】
 
 做题记录
 
+```js
+// 作业86：Nextjs 中 Link 的变更是哪个版本开始的，有什么变更？从这个版本开始对路由有什么变更？
+13.x
+Link 被解析为 a 标签，可以直接在 Link 标签写属性 href
+路由系统变更 pages/index.js 和 pages/api 改变 为
+src/app/page.tsx + src/app/layout.tsx + src/app/api
+- 第六遍 2025.3.18 -
+❌ // 1、公共布局文件的路径记错了 src/app/layout.ts + src/app/global.css
+- 第五遍 2025.3.13 -
+❌ // 1、少写了「后端路由系统」的变更 从 pages/api 改为 src/app/api 
+- 第四遍 2025.2.16 -
+- 第三遍 2025.1.31 -
+- 第二遍 2025.1.26 -
+- 第一遍 2025.1.22 -
 ```
+
+```js
+// 作业82：写一个复杂的 SQL： ①只返回某列不同的值，相同的忽略 ②拼接A列和B列为字符串后输出 ③将某一列转换为大写输出 ④计算某列行数，一个包含null的个数，一个不包含null个数 ⑤求和、求最大、求最小、求平均某列的值 ⑥给表起别名 ⑦查询条件涵盖 id为1,同时price大于10，或者是NULL，或者是 5-10之间，或者是 1或2，或者年份为2025 ⑧按照某列分组 ⑨按照某列排序(降序)
+- 第七遍 2025.3.30 -
+SELECT DISTINCT t.name,
+	CONCAT('(', t.id,')') AS new_id,
+    UPPER(t.sex) AS new_sex,
+    COUNT(r.price) AS with_out_null,
+    COUNT(*) AS with_null,
+	SUM(t.price) AS sum, MAX/MIN/AVG
+FROM Time as t, Routine as r
+WHERE id = 1 AND (
+	t.price > 10 OR
+    t.price IS NULL OR
+    t.price BETWEEN 5 AND 10 OR
+    t.price IN (1, 2) OR
+	YEAR(t.time) = 2025
+)
+GROUP BY t.price
+ORDER BY t.name DESC
+- 第六遍 2025.3.18 -
+❌ // 1、WHERE 没有使用 AND 和 ()
+❌ // 2、排序的关键词 不是 sort 是 ORDER BY ..
+- 第五遍 2025.3.11 -
+❌ // 1、IN 后面要接小括号 (1, 2)
+- 第四遍 2025.2.16 -
+- 第三遍 2025.1.30 -
+- 第二遍 2025.1.26 -
+- 第一遍 2025.1.23 -
+```
+
+```js
+// 作业101：什么是 JS 的一等对象？还有哪些一等对象
+- 第一遍 2025.3.30 -
+一等对象：①可以当做参数传递 ②可以当做函数返回值 ③可以当做数据结构存储 ④可以在运行时创建 // ❌ 1、少写了：可以被赋值给变量
+函数、对象、数组、原始类型包装对象
+```
+
+```js
+// 2025-03 TCP 滑动窗口 VS TCP 排队
+- 第二遍 2025.3.30 -
+TCP滑动窗口：针对的是传输层，根据接收方返回的窗口大小动态调整发送的速度。// ⭐️ 只影响单个 TCP 的发送速率
+	作用是最大限度使用接收方的数据处理能力，并且避免接收方过载 ❌ // 1、少写了：实现流量控制
+TCP排队：针对的是应用层，浏览器限制同一个域名可以同时建立的连接数量
+	作用是避免过多请求使服务端瘫痪
+- 第一遍 2025.3.17 - 
+```
+
+``` js
+// 2025-03 js执行优先级 + 测试题
+- 第二遍 2025.3.30 -
+小括号()>.获取属性>new foo无参数实例化>new foo()有参数实例化>执行函数
+❌ // 1、排序 ()小括号>.属性名调用>new Foo()有参数>函数执行()>new Foo无参数
+var a = new Foo.getName();  执行顺序是 new (Foo.getName)() 得到 空对象
+var b = new Foo().getName(); 顺序是 ((new Foo()).getName)() 只是函数执行，得到 undefined
+var c = new new Foo().getName(); 顺序是 new ((new Foo()).getName)() 得到空对象
+- 第一遍 2025.3.17 -
+```
+
+```js
+// 2025-03 浏览器前端性能优化RAIL
+- 第二遍 2025.3.30 -
+// ⭐️ 用于优化和衡量 网页性能的模型
+Response 是 300ms 内用户操作响应 // ❌ 1、100ms 内响应用户输入
+Animation 是 动画优化，可以使用 requestAnimationFrame 获取下次重绘时间 // ❌ 2、至少每秒 60 帧运行动画 + css 动画、合成线程 GPU 加速、避免回流重绘
+Idle 可以使用 requestIdleCallback，在空闲时间执行任务 // ⭐️ 预取数据、加载非关键资源
+Load 在 1000ms 内 FCP 首次内容渲染时长（白屏优化）// ❌ 3、是3秒内完成 FCP
+- 第一遍 2025.3.17 -
+❌ // 1、重绘时间函数名称错误 requestAnimationFrame
+```
+
+```js
+// 2022-10 TS 泛型函数/泛型接口/泛型约束、特性、type/keyof/enum/as/Partial
+- 第二遍 2025.3.30 -
+泛型函数 function get<T>(a:T):T[]{ return [a] }
+泛型接口 interface Code<T>{ v:T, get(a:T):T[]{ return [a] } }
+		interface Code{ get<T>(a:T): T[] { return [a] } }
+泛型约束 interface Code<T extends {name: string}> { v:T }
+特性 面向接口编程；TS 的编译就是将声明变量移除，保留功能代码 // ⭐️ 去除类型校验
+type 类型别名 type Code = string | number; / keyof Coder => 'young' | 'old'
+keyof 获取一个类型结构的属性名作为联合类型 
+enum 声明一组常量为一个类型 enum Coder { young=15, old=88 }
+as 类型断言，将某个对象强制转换为某个类型 const a:number = (b as string).length
+Partial 将声明的变量都变为可选 // ⭐️  属性变为可选
+- 第一遍 2025.3.17 -
+❌ // 1、少写了函数名称，T 放在函数名称后面：function getCode<T, R>(){}
+❌ // 2、泛型写在名称后面 interface MyCode<T>{}
+❌ // 3、泛型写在名称后面 function getCode<T extends {v:number}>(a:T):T {return a}
+```
+
+```js
+// 2025.02 docker-compose 的配置管理 context 
+- 第四遍 2025.3.30 -
+.yml 文件中 context 配置的是 docker 执行时  COPY ADD 的根目录 // ❌ 1、docker 构建上下文
+- 第三遍 2025.3.17 -
+context 配置 docker 构建上下文
+// ❌ 1、没有 move 指令，是 ADD 指令（可以解析tar文件
+- 第二遍 2025.3.10 -
+// ❌ 1、指定构建上下文路径
+// ❌ 2、dockerfile + COPY ADD
+- 第一遍 2025.2.28 -
+```
+
+```js
+// 2025.02 TS - dayjs 引入但失效问题
+- 第四遍 2025.3.30 -
+因为 dayjs 是一个 commonjs 模块，在 tsconfig.ts 中配置对应配置 // ⭐️ tsconfig.json
+{ 分别表示 ES6 模块管理方式和CommonJS管理方式的互相切换
+    esModuleInterop: true,
+	asyncSyntheticDefaultImports: true
+} 处理CommonJS 没有默认导出模块名称的问题
+- 第三遍 2025.3.17 -
+❌ // 1、allowSyntheticDefaultImports 属性名称错误 - 记忆法：允许异步默认导入s
+- 第二遍 2025.3.10 -
+- 第一遍 2025.2.28 -
 ```
 
