changeLog 更新：网站的 修改答案 + 做题 功能完成 （AI 下周期支持）

--- a/_posts/2024-12-26-项目进展.md
+++ b/_posts/2024-12-26-项目进展.md
@@ -36,36 +36,44 @@ LTN工具 [J-Table ](https://github.com/CodingWithAlice/J-Table)
 
 #### 二、功能开发进展 changeLog
 
-##### ## 2025.04.11
+- 需求4：AI 查询 - 当前工程里面没有接入，周末要结束了，AI 下周再支持
+
+##### ## 2025.04.11-13
 
 - 需求3：提供做题界面 + 做题时间 + 做题时长
 
 功能梳理：前端视角需要的接口信息记录
 
-- 点开弹窗，调用①初始化接口：判断是否展示正确答案界面 
-    - 不展示就停，等做题
-    - 展示则将接口中查询的剩余信息展示
+- 点开弹窗，调用①初始化接口：判断是否展示正确答案界面 ✅
+    - 不展示就停，等做题 ✅
+    - 展示则将接口中查询的剩余信息展示 ✅
 - 做完题，点击校验，调用校验接口：需要调用2个接口
-    - ②post 接口用于存储最新一次做题答案，同时返回需要展示的数据
-    - ③AI 查询当前输入的内容 和 正确答案的 错误信息分析、推论
-- ④保存：可以填写修改 历史错误信息 + 做题时长，点击保存按钮，将数据落表
-    - 刷新做题时间 + 模拟之前 Box 的升降功能（页面升降入口关闭）
+    - ②post 接口用于存储最新一次做题答案，同时返回需要展示的数据 ✅
+    - ③AI 查询当前输入的内容 和 正确答案的 错误信息分析、推论 todo 📢
+- ④保存：可以填写修改 历史错误信息 + 做题时长，点击保存按钮，将数据落表 ✅ 
+    - 刷新做题时间 + 模拟之前 Box 的升降功能（页面升降入口关闭）✅
 
 ```js
-// 做题界面 - ①初始化接口需要的字段
-{
-	showRightAnswer: false; // 计算逻辑：当前做题日期 - 上次做题时间 > 间隔时间
+// 核心 两个 mongodb 表
+// 正确答案记录表，唯一查询: topicId
+question_answers: {
+    rightAnswer: string; // 正确答案
+    wrongNotes: string; // 错误记录
+    topicTitle: string;
+    topicId: number; // 关联 MySQL
 }
-// 做题界面 - ②点击校验需要的字段 + 将最新一次做题答案存储到 mongodb
-{
-    showRightAnswer: true,
-	rightAnswer: '正确答案，包含 \n',
-    wrongNotes: ['错误1', '错误2'],
-    durationSec: 231, // 做题时长，min 为单位
+// 做题记录表，唯一查询: topicId+submitTime
+answer_records: {
+    topicTitle: string;
+  durationSec: number; // 做题时长
+  submitTime: string; // 提交时间（和 mysql 中的 solveTime 对齐）
+  topicId: number;
+  isCorrect: boolean; // 升/降BOx
+  recentAnswer: string; // 最近一次的答案
 }
 // 做题界面 - ③AI 校验返回的信息使用另一个接口异步返回（一般比较慢）
 {
-    suggesttion: []
+    suggesttion: [] //不落表
 }
 ```
 
