--- a/_posts/工程化/2025-03-04- docker-服务器数据盘迁移.md
+++ b/_posts/工程化/2025-03-04- docker-服务器数据盘迁移.md
@@ -13,7 +13,23 @@ typora-root-url: ..
 
 
 
-# docker-服务器数据盘迁移 
+# docker-服务器数据盘迁移 + 镜像缓存清理
+
+ 
+
+```js
+<!-- 清理 docker镜像 -->
+// 进入 root 账户 查看所有镜像
+sudo su -
+docker image ls 
+// 清理所有悬空（dangling）镜像，悬空镜像指的是没有被任何标签引用的镜像
+docker image prune
+docker system prune
+// 若要删除所有未被使用的镜像（不仅仅是悬空镜像）
+docker image prune -a
+```
+
+
 
  `df -h` 查看数据盘是否已经挂载
 
