changeLog 更新：TED、阅读/电影记录 + AI 判题 LTN支持

--- a/_posts/2024-12-26-项目进展.md
+++ b/_posts/2024-12-26-项目进展.md
@@ -21,14 +21,17 @@ LTN工具 [J-Table ](https://github.com/CodingWithAlice/J-Table)
 
 - 规划表
 - LTN v1.0 工具：记录每题做题时间 ✅ + 提示下次做题时间 ✅ 
-- LTN V2.0 工具：在网站记录答案 + 做题记录
+- LTN V2.0 工具：在网站记录答案 + 做题记录 + AI 判题 ✅ 
 
 复盘工具 [Next_Pro](https://github.com/CodingWithAlice/Next_Pro)  
 
 -	Nextjs + API Route + Sequelize + MySQL + Mongodb ✅
-
--	日报✅、周报✅、月报✅、季报✅
+-	日报✅、周报✅、月报✅、季报
 -	阅读、影视化相关日报中：想要实现【一句之诗】，每天把喷涌的思考，汇总成一句话
+    -	TED 重刷感受记录 ✅
+    -	阅读/电影等体验记录 ✅
+    -	运动记录
+
 
 
 
@@ -36,11 +39,30 @@ LTN工具 [J-Table ](https://github.com/CodingWithAlice/J-Table)
 
 #### 二、功能开发进展 changeLog
 
-- 需求4：AI 查询 - 当前工程里面没有接入，周末要结束了，AI 下周再支持
+##### ## 2025.06.28
+
+大虐，由于 5月加班非常严重 + 6月初阳一直在睡觉，功能进展较缓慢
+
+- 需求4：LTN做题 Deepseek 查询 已接入 ✅
+- 需求5：TED、电影/书籍 相关记录界面 已支持 ✅
+- 需求6：每日做题记录、隔天错题重做 已支持 ✅
+
+新需求：
+
+- 需求7：月报优化，从「数据陈列」到「驱动行动」的转变
+- 需求8：提供运动记录、管理的界面呈现方式，方便打卡和管理
+
+
+
+##### ## 2025.04.20
+
+从去年9月起的所有做题历史记录导入 mongodb
+
+
 
 ##### ## 2025.04.11-13
 
-- 需求3：提供做题界面 + 做题时间 + 做题时长
+- 需求3：提供做题界面 + 做题时间 + 做题时长 ✅
 
 功能梳理：前端视角需要的接口信息记录
 
@@ -85,6 +107,8 @@ answer_records: {
 
 - 需求2：mongodb 管理 题目答案（弹窗手动添加/修改） ✅
 
+
+
 ##### ## 2025.04.04
 
 - 需求1：添加表 level + 给所有题目定级(借助 AI) 并更新间隔时间✅
@@ -110,6 +134,8 @@ answer_records: {
         created_at: ISODate("2025-04-05T10:00:00"), 
     }
     ```
+    
+    
 
 ##### ## 2025.03.29
 
