changeLog 更新：周报 AI 方案优化 + 月报改版记录

--- a/_posts/2024-12-26-项目进展.md
+++ b/_posts/2024-12-26-项目进展.md
@@ -39,6 +39,19 @@ LTN工具 [J-Table ](https://github.com/CodingWithAlice/J-Table)
 
 #### 二、功能开发进展 changeLog
 
+##2025.07.26
+
+1、周报 AI 工具无法满足当前写周报需求 -> 改为 部分数据组装+部分AI推论 ✅
+
+2、月报页面改版 需求 7 完成 ✅
+
+- 季报计划：月报改版后，实行2-3个月，再完善季报
+
+    - 季报尝试解决的问题：对齐年报、季节性规律调整、方法论沉淀、认知突破总结
+- 需求8：提供运动记录、管理的界面呈现方式，方便打卡和管理
+
+
+
 ##### ## 2025.06.28
 
 大虐，由于 5月加班非常严重 + 6月初阳一直在睡觉，功能进展较缓慢
@@ -50,7 +63,64 @@ LTN工具 [J-Table ](https://github.com/CodingWithAlice/J-Table)
 新需求：
 
 - 需求7：月报优化，从「数据陈列」到「驱动行动」的转变
-- 需求8：提供运动记录、管理的界面呈现方式，方便打卡和管理
+
+    - 月报当前痛点：像是多个周报的数据集合，缺乏跨周期的洞察、战略层提炼
+
+    - 月报优化方向：从数据中提取模式，推动系统性改进 + 输出非短期任务的决策
+
+        - 【顶部】趋势变化分析
+
+            1、不同类型的热力图 ✅
+
+            （过滤了 工作 和 睡眠）
+
+            - 工作：是不得不投入时间用于赚钱的 - 至少现在而言，通过文档、月计划整理工作与我而言可控
+            - 睡眠：会影响直观地观察 各个事项在周期中的热力情况
+
+            2、学习效率曲线 ✅
+
+            - 分母 times 定义：工作日 下班时间-23:00；休息日 LTN/前端>30min，事项开始时间-23:00，不包含其他事项时间
+            - 时段系数：工作日下班 1.2，周末 0.9；LTN 1.2 前端 1.0
+            - 日学习效率分 = (LTN分钟数 \times*1.2 + 前端分钟数 \times) *时段系数
+
+            3、【由上述两项数据推论】归因挖掘
+
+            - 1、退步：计划不合理？执行漏洞/干扰事项？
+            - 2、进步：哪些方法论可以复用到其他方向
+
+        - 【中间】环比数据 ✅
+
+            - 年度目标计算
+
+                除去工作：52周 * 2天周末/周 * 4h + 52周 * 5天工作日/周*2h = 936h = 56160m
+
+                - 学习专注时长：【暂时规划一半】56160m / 2 ≈ 25000m
+
+                - LTN做题时长：【暂时规划一半】56160m / 2 ≈ 25000m
+
+                - 复盘时长：365天 * 0.5h + 周报 2h * 36h + 月报 1h * 12 = 266h = 15960m
+
+                - 技术占比【暂缓】
+
+                - TED观看时长：365 * 1/3 * 15min = 1825m
+
+                - 阅读时长：365 * 10min = 3650m / 2（上半年几乎没记录阅读时长）
+
+                - 平均入睡时间：环比展示
+
+                - 平均起床时间：环比展示
+
+                - 运动时长：52周 * 5天 * 30m = 7800m
+
+            - 时长差异的原因
+
+        - 【底部】非短期决策 ✅
+
+            - 保持原有周事项罗列
+            - 1、保持：哪些已验证的有效模式
+            - 2、试验：迁移有用的学习方法
+            - 3、放弃：哪些事情看似重要，但无实际回报
+            - 4、偏离：时间投入占比是否偏离重点
 
 
 
