add box1: 2025.07 防抖节流在React组件中的使用

--- a/_posts/算法、刷题/2025-07-26-防抖节流 + 在React组件中的使用踩坑.md
+++ b/_posts/算法、刷题/2025-07-26-防抖节流 + 在React组件中的使用踩坑.md
@@ -1,8 +1,8 @@
 ---
 layout:     post
-title:      防抖节流
+title:      防抖节流 + 在React组件中的使用踩坑
 subtitle:  
-date:       2021-07-10
+date:       2025-07-26
 author:     
 header-img: 
 catalog: true
@@ -11,17 +11,85 @@ tags:
 typora-root-url: ..
 ---
 
-##  防抖节流
+##  防抖节流 + 在React组件中的使用踩坑
 
 总结：
 
-​	平时键盘抬起就会搜索，**防抖后，间隔一段时间不输入才会搜索**，**节流后，在频繁触发的事件流中，函数以固定的频率执行**。
+1、平时键盘抬起就会搜索，**防抖后，间隔一段时间不输入才会搜索**，**节流后，在频繁触发的事件流中，函数以固定的频率执行**
 
-##### 1、 函数防抖
+2、在 组件中实现 防抖时，需要注意配合 useCallback 避免 组件重新渲染导致 定时器失效
 
-类似法师技能读条，还没读完条再按技能，会重新读条
+3、使用防抖后，需要清理
 
-- 防抖的原理就是：触发事件，但是我一定 **在事件触发 n 秒后才执行**，如果你在一个事件触发的 n 秒内又触发了这个事件，那我就 **以新的事件的时间为准，n 秒后才执行**，总之，就是要等你 **触发完事件 n 秒内不再触发事件，我才执行。**
+
+
+## 一、实际应用 - 踩坑记录
+
+#### 1、使用场景
+
+- 防抖 `debounce` 
+    - `search` 搜索联想，用户在不断输入值时，用防抖来节约请求资源
+
+    - 浏览器 `resize` 的时候，不断的调整浏览器窗口大小会不断的触发这个事件，用防抖来让其只触发一次
+
+- 节流 `throttle`  
+    - 鼠标不断点击触发，`mousedown` (单位时间内只触发一次)
+    - 监听滚动事件，比如是否滑到底部自动加载更多，用 `throttle` 来判断
+
+#### 2、防抖在 React 组件中使用时，需要配合 useCallback
+
+```javascript
+const handleFunc = useCallback( debounce(e => {}, 50), [])
+```
+
+问题：防抖失效
+
+原因：在 React 组件中，如果 直接写 const fn = debounce(…)，每次 **组件渲染** 都会 **生成新的** debounce 实例，导致防抖失效 -> **每次都是新的定时器**
+
+解决方案：useCallback 返回一个记忆化的回调函数，只有依赖项变化时才会重新生成 -> **保证 debounce 的定时器和状态能持续生效**
+
+
+
+#### 3、防抖需要清除！！
+
+问题：onMouseMove 函数防抖后，鼠标离开表格，但防抖的延迟执行是异步的：即使事件停止触发，最后一次调用仍可在未来执行
+
+原因：鼠标离开表格，若防抖延迟(50ms)未结束，最后一次 onMouseMove 仍会执行
+
+解决方案：防抖是需要清除的
+
+清理时机：
+
+- 组件卸载，useEffect的清理函数 或 componentWillUnMount
+- 事件监听移除前
+- 依赖变化时
+
+```javascript
+useEffect(() => {
+    return () => onMouseMove.cancel() // 1、lodash 实现的防抖函数使用 cancel 来清理 timeId
+}, [])
+const onMouseLeave = useCallback(() => {
+    onMouseMove.cancel() // 2、函数变更，取消未执行的防抖函数
+}, [onMouseMove])
+```
+
+#### 
+
+#### 4、lodash 的节流 可以配置属性
+
+如果频繁调用，可以配置 throttle 的 leading: true trailing:true 决定是否在头部/尾部执行
+
+
+
+
+
+## 二、实现
+
+#### 1、 函数防抖
+
+类似法师技能读条，还没读完条再按技能，会重新读条 -> 在事件被触发n秒后再执行回调，如果在这n秒内又被触发，则重新计时
+
+- 防抖原理：触发事件，但是 **在事件触发 n 秒后才执行**，如果在一个事件触发的 n 秒内又触发了这个事件，那就 **以新的事件触发的时间为准，n 秒后才执行**，–> 即要等 **触发完事件 n 秒内不再触发事件，才会执行事件**
 
 - 实现防抖的 **典型逻辑** 是通过设置一个定时器，<u>每次事件触发时清除之前的定时器</u>，然后重新设置一个新的定时器。只有当最后一次触发后经过了设定的延迟时间，定时器中的函数才会执行。
 
@@ -44,7 +112,7 @@ typora-root-url: ..
 
     <img src="/../img/assets_2023/image-20241213222902041.png" alt="image-20241213222902041" style="zoom:25%;" />
 
-##### 2、函数节流
+#### 2、函数节流
 
 就是 <u>一直按着技能键</u>，也能在规定时间内发技能 - 解决被触发频率太高的问题
 
@@ -79,21 +147,9 @@ typora-root-url: ..
     
     
 
-##### 3、实际应用场景
+## 三、细节
 
-- 防抖 `debounce`
-
-    - `search` 搜索联想，用户在不断输入值时，用防抖来节约请求资源
-
-    - 浏览器 `resize` 的时候，不断的调整浏览器窗口大小会不断的触发这个事件，用防抖来让其只触发一次
-
-- 节流 `throttle` 
-    - 鼠标不断点击触发，`mousedown` (单位时间内只触发一次)
-    - 监听滚动事件，比如是否滑到底部自动加载更多，用 `throttle` 来判断
-
-### 一、函数防抖(debounce) - 节约开销
-
-在事件被触发n秒后再执行回调，如果在这n秒内又被触发，则重新计时。
+#### 1、函数防抖 - 节约开销
 
 案例：一段键盘输入就执行函数的代码 - 如图，存在抖动问题
 
@@ -102,7 +158,6 @@ typora-root-url: ..
 将函数进行防抖处理 - 优化后：
 
 ```javascript
-// 通过防抖函数处理后，只有当你在指定间隔内（1s）没有输入时，才会执行函数
 function debounce(fn, delay) {
     let timeId = null;
     return function (...args) {
@@ -158,7 +213,7 @@ input.addEventListener('keyup', (e) => {
 
 规定在一个单位时间内，只能触发一次函数。**如果这个单位时间内触发多次函数，只有一次生效。**
 
-### 二、节流
+#### 2、节流
 
 ```javascript
 // 在不断输入时，ajax会按照我们设定的时间，每1s执行一次
@@ -179,7 +234,7 @@ let throttle = (callback, delay) => {
         }
     }
 }
-// 可以简化成 flag 来实现
+// 可以简化成 flag 来实现 - 无法处理异步场景
 function throttle(fn, delay) {
     let timer = null;
     let flag = true;
@@ -204,17 +259,3 @@ input3.addEventListener('keyup', (e) => {
 
 <img src="/../img/assets_2019/image-20210710203800964.png" alt="image-20210710203800964" style="zoom:33%;" />
 
-解决上文外部的 `delay` 时间小于 防抖的 `delay` 时间 - `show` **函数不会执行** 
-
-```js
-// 不管我们设定的执行时间间隔多小，总是1s内只执行一次。
-setInterval(throttle(show,3000),2000);
-```
-
-看一下打印结果：
-
-<img src="/../img/assets_2019/image-20210711133823106.png" alt="image-20210711133823106" style="zoom:33%;" />
-
-分析 - 利用定时执行函数里面 `now` 的**闭包**，将 last 时间设置成定时任务开始的时间：
-
-<img src="/../img/assets_2019/image-20210711133948409.png" alt="image-20210711133948409" style="zoom:30%;" />
