add box1: 2025.07 class 组件的 setState 和 函数组件的 useState 的使用差异

--- a/_posts/react17+ts4/2025-04-13-输入框不失焦导致数据不更新问题.md
+++ b/_posts/react17+ts4/2025-04-13-输入框不失焦导致数据不更新问题.md
@@ -23,7 +23,7 @@ typora-root-url: ..
 - 是异步的，并且遵循 React 的 useState 的更新规则，在  **当前事件循环结束后** 批量更新状态/统一处理状态变更（也就是 onBlur 后更新 form 的值） VS 原生 input 是同步的【这里的知识点就是 合成事件和原生事件的差异】
 - 是 onBlur 还是 onChange 触发刷新并不重要，重要的是，触发 Input 值变更后，值的变更是异步的，依旧需要等待 **当前事件循环结束后**
 - 执行顺序：
-    `Sync code` → `Micro task` → `Macro task` → **状态更新**（React 批处理）
+    <span style='color:red'>`Sync code` 同步任务 → `Micro task` 微任务 → `Macro task` 宏任务 → **状态更新**（React 批处理）</span>
 
 
 
@@ -33,7 +33,7 @@ typora-root-url: ..
 
 ##### 原因排查
 
--	InputNumber 在 antd 中做了优化，为了防抖，是在 onblur 触发事件 - 更新数据
+-	InputNumber 在 antd 中做了优化，**为了防抖，是在 onblur 触发事件** - 更新数据
 
 ##### 解决方案
 
@@ -91,7 +91,7 @@ const handleSave = () => {
 
 - 新问题：时序问题，页面崩溃解决后，发现 blur 的确会触发 onChange 事件来更新数据，但是即使有 setTimeout 还是先进行了 数据的提交，再更新了数据 - 与预期的先后顺序不符合
 
-核心问题总结：不需要这么麻烦，去获取 ref 来强制更新，只要知道 合成事件的批量更新机制，是在一个事件循环结束后，就可以利用 setTimeout 在下个事件循环获取最新、准确的数据
+核心问题总结：不需要这么麻烦，去获取 ref 来强制更新，只要知道 **合成事件的批量更新机制**，是在一个事件循环结束后，就可以利用 setTimeout 在下个事件循环获取最新、准确的数据
 
 ##### 2、最终解决方案
 
