--- a/_posts/浏览器原理相关内容/2024-10-11-浏览器隐藏滚动条、绝对定位影响滚动条.md
+++ b/_posts/浏览器原理相关内容/2024-10-11-浏览器隐藏滚动条、绝对定位影响滚动条.md
@@ -88,7 +88,7 @@ body {
 
 滚动条经典问题
 
-根本原因：绝对定位元素有”隐形扩张“效应，即使设置了绝对定位，在标准文档流中不占位，在浏览器计算滚动区域时，仍会考虑
+根本原因：绝对定位元素有【隐形扩张】效应，即使设置了绝对定位，在标准文档流中不占位，在浏览器计算滚动区域时，仍会考虑
 
 - 绝对定位元素若 **超过父容器的包含块** 仍会扩展滚动区域
 
@@ -99,7 +99,7 @@ body {
 
 具体案例：
 
-问题描述：父盒子和子盒子高度一样，但是出现纵向滚动条
+问题描述：父盒子和子盒子 **高度一样**，但是出现纵向滚动条
 
 ---> 在一个写死 24px 高度的盒子中，内容 24px + 1px border => 依旧会撑开最外层的 滚动条
 
