补充组件渲染值不更新的 示例 和 解决方案

--- a/_posts/react17+ts4/2025-07-27- 在组件回调函数获取最新值失败的原因和方案.md
+++ b/_posts/react17+ts4/2025-07-27- 在组件回调函数获取最新值失败的原因和方案.md
@@ -17,9 +17,20 @@ typora-root-url: ..
 
 总结：
 
-1、原因：在 回调函数中使用 组件的变量时，变量永远是 **生成时 的值**，后续的变更不会传入变化
+1、原因：在 columns validate 回调函数中使用 组件变量时，变量永远是 **生成 的值**，后续的变更不会传入变化
 
-2、解决方案动态获取可以使用 ref 或者 useEffect 监听依赖
+- 函数组件每次渲染都是独立的闭包，所有的内部函数捕获的都是 **创建时的状态快照**，不是调用时的状态
+
+2、解决方案：动态获取可以**①使用 ref** + **②useMemo**
+
+- useEffect + setColumns 容易产生闭包问题(示例如下)，易遗漏 -> useMemo 更可靠
+
+更新示例：在 columns onOper 时又遇到了值无法及时更新的情况
+
+- 即使 onOper 虽然是最新的，但是函数本身可能持有旧数据 -> 若 getColumns 依赖的函数（如 onOper）**未用 useCallback 缓存**，即使 source 更新，validate 仍可能持有旧函数
+
+- onOper 使用 useEffect 监听没有生效 -> 可能是 useEffect 捕获的函数 getColumns 不是最新的
+    - 最后采用了**③劫持回调**，直接在 onOper 回调参数中抛出 data 数据
 
 
 
@@ -73,13 +84,17 @@ const getColumns = (s) => ([
 
 ```js
 useEffect(() => {
-    setColumns(getColumns(source))
-}, [source])
+    setColumns(getColumns(source)) // 每次 source 变化时重新生成 columns
+}, [source]) // 依赖 source
 ```
 
+方案2、useMemo【推荐】
 
+```js
+const columns = useMemo(() => getColumns(), [source]); // 自动依赖 source
+```
 
-方案2、使用 ref
+方案3、使用 ref
 
 ```js
 validate: (_, record) => {
