update：LTN 做题反哺的更新 输入框不失焦导致数据不更新问题

--- a/_posts/react17+ts4/2025-04-13-输入框不失焦导致数据不更新问题.md
+++ b/_posts/react17+ts4/2025-04-13-输入框不失焦导致数据不更新问题.md
@@ -23,7 +23,11 @@ typora-root-url: ..
 - 是异步的，并且遵循 React 的 useState 的更新规则，在  **当前事件循环结束后** 批量更新状态/统一处理状态变更（也就是 onBlur 后更新 form 的值） VS 原生 input 是同步的【这里的知识点就是 合成事件和原生事件的差异】
 - 是 onBlur 还是 onChange 触发刷新并不重要，重要的是，触发 Input 值变更后，值的变更是异步的，依旧需要等待 **当前事件循环结束后**
 - 执行顺序：
-    <span style='color:red'>`Sync code` 同步任务 → `Micro task` 微任务 → `Macro task` 宏任务 → **状态更新**（React 批处理）</span>
+    <span style='color:red'>`Sync code` 同步任务 → **状态更新**（React 批处理）→ `Micro task` 微任务 → `Macro task` 宏任务→ UI 渲染 </span>
+    
+    - **React 17 及之前**：状态更新在 **宏任务之前、微任务之后** 执行
+    
+    - **React 18（自动批处理）**：状态更新在 **所有同步代码执行完后、微任务之前** 完成
 
 
 
