update：p-limit 使用+源码

--- a/_posts/算法、刷题/2025-03-07-p-limit 使用+源码 、100个请求并发请求、分时操作.md
+++ b/_posts/算法、刷题/2025-03-07-p-limit 使用+源码 、100个请求并发请求、分时操作.md
@@ -31,22 +31,36 @@ import pLimit, { limitFunction } from 'p-limit';
 // 第一种写法
 const limit = pLimit(2); // ①创建一个限制器实例，设置并发限制为 2
 const tasks1 = Array.from({ length: 5 }, (it, index) =>
-    limit(() => new Promise((resolve) => setTimeout(resolve, index * 100))
+    limit(() => new Promise(resolve => setTimeout(resolve, index * 100))
 ); // ②创建任务数组：利用 limit 包裹每一个请求，组成数组
-Promise.all(tasks1).then((results) => console.log('All:', results) ); // ③执行所有任务
+Promise.all(tasks1).then(results => console.log('All:', results) ); // ③执行所有任务
+
 // 第二种简写法
-const tasks2 = Array.from({length:20}, (it, index) =>
-    limitFunction(() => new Promise(resolve=>setTimeout(resolve,index)),{concurrency: 2}))
+const limitedTask = limitFunction(async (index: number) => {
+    await new Promise(resolve => setTimeout(resolve, index * 100));
+    return `Result ${index}`;
+}, {concurrency: 2}); // 全局限制为2个并发
+
+// 创建任务数组，每个任务调用 limitedTask
+const tasks2 = Array.from({length: 20}, (_, index) => limitedTask(index));
 Promise.all(tasks2).then((results) => console.log('All:', results) );
 ```
+
+```js
+// 之前的简写法是❌的 -> 每次循环都会创建新的 limitFunction 实例 -> 导致并发数量为 20*2
+const tasks2 = Array.from({length:20}, (it, index) =>
+    limitFunction(() => new Promise(resolve=>setTimeout(resolve,index)), {concurrency: 2}))
+```
+
+
 
 #### 2、p-limit 源码
 
 核心逻辑主要围绕任务的并发控制展开，包括任务队列的管理、并发数量的限制以及任务的执行和调度
 
-- 任务队列管理 queue：用数组存储待执行的任务，当并发任务数量达到限制时，新的任务被添加到
+- 任务队列管理 queue：用数组存储待执行的任务，当并发任务数量达到限制时，新的任务被添加到队列
 - 并发数量限制 concurrency：计数器 - 跟踪正在执行的任务数量；到限制时，新任务被暂停执行
-- 任务执行、调度：有任务完成时，计数器 减1；并从队列中取出一个任务执行，计数器再 +1
+- 任务执行、调度：有任务完成时，计数器 减1；并从队列中取出一个任务执行，计数器再 +1；系统**永远不会真正结束**，直到没有引用
 
 ```js
 function validateConcurrency(limit) { // 校验是否为正整数 
